<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.selfproject.androidauth.ResetPasswordActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:background="#EEEEEE"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.selfproject.androidauth.ResetPasswordActivity"
        tools:showIn="@layout/activity_reset_password">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ilab"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/reset_password"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#424242" />

            <EditText
                android:id="@+id/email"
                android:background="@drawable/background_editext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_marginTop="40dp"
                android:hint="@string/hint_email"
                />

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:textColor="#424242"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@drawable/background_login"
            android:text="@string/btn_reset_password"
            />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="#8bc34a" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>
