<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.selfproject.androidauth.SignUpActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:background="#EEEEEE"
        android:gravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.selfproject.androidauth.SignUpActivity"
        tools:showIn="@layout/activity_sign_up">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ilab"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/signup_form"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#424242" />

        <EditText
            android:id="@+id/email"
            android:background="@drawable/background_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginTop="25dp"
            android:hint="@string/hint_email"
            />

        <EditText
            android:id="@+id/password"
            android:background="@drawable/background_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_password"
            />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:textColor="#424242"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@drawable/background_login"
            android:textAllCaps="false"
            android:text="REGISTER"
            />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textSize="15dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>
